--- a/series.html
+++ b/series.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>movie website</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="series.css" />
   </head>
   <body>
     <header></header>
@@ -20,21 +20,31 @@
       <section class="container">
         <article>
           <img
-            src="image/Meg 2.jpg"
+            src="image/Only Murders in the Building.jpg"
             class="cover"
             alt="photo"
           />
-          <p>فیلم</p>
+          <p>Only Murders in the Building</p>
+          <a href="#">بیشتر...</a>
+        </article>
+        <article>
+          <img src="image/riverdale.jpg" class="cover" alt="photo" />
+          <p>Riverdale</p>
+          <a href="#">بیشتر...</a>
+        </article>
+        <article>
+          <img src="image/The Witcher.jpg" class="cover" alt="photo" />
+          <p>The Witcher</p>
+          <a href="#">بیشتر...</a>
+        </article>
+        <article>
+          <img src="image/Celebrity.jpg" class="cover" alt="photo" />
+          <p>Celebrity</p>
           <a href="#">بیشتر...</a>
         </article>
         <article>
           <img src="image/Black Mirror.jpg" class="cover" alt="photo" />
-          <p>سریال</p>
-          <a href="#">بیشتر...</a>
-        </article>
-        <article>
-          <img src="image/shawshank.jpg" class="cover" alt="photo" />
-          <p>250 فیلم برتر IMDb</p>
+          <p>Black Mirror</p>
           <a href="#">بیشتر...</a>
         </article>
       </section>
