--- a/film.html
+++ b/film.html
@@ -19,53 +19,53 @@
     <main>
       <section class="container">
         <article>
-          <img
-            src="image/barbie.jpg"
-            class="cover"
-            alt="photo"
-          />
-          <p>Barbie</p>
-          <a href="#">بیشتر...</a>
+          <a href="#">
+            <img src="image/barbie.jpg" class="cover" alt="photo" />
+            <p>Barbie</p>
+          </a>
         </article>
         <article>
-          <img
-            src="image/oppenheimer.jpg"
-            class="cover"
-            alt="photo"
-          />
-          <p>oppenheimer</p>
-          <a href="#">بیشتر...</a>
+          <a href="#">
+            <img src="image/oppenheimer.jpg" class="cover" alt="photo" />
+            <p>oppenheimer</p>
+          </a>
         </article>
         <article>
-          <img src="image/Jeanne du Barry.jpg" class="cover" alt="photo" />
-          <p>Jeanne du Barry</p>
-          <a href="#">بیشتر...</a>
+          <a href="#">
+            <img src="image/Jeanne du Barry.jpg" class="cover" alt="photo" />
+            <p>Jeanne du Barry</p>
+          </a>
         </article>
         <article>
-          <img src="image/No Hard Feelings.jpg" class="cover" alt="photo" />
-          <p>No Hard Feelings</p>
-          <a href="#">بیشتر...</a>
+          <a href="#">
+            <img src="image/No Hard Feelings.jpg" class="cover" alt="photo" />
+            <p>No Hard Feelings</p>
+          </a>
         </article>
         <article>
-          <img src="image/elemental.jpg" class="cover" alt="photo" />
-          <p>Elemental</p>
-          <a href="#">بیشتر...</a>
+          <a href="#">
+            <img src="image/elemental.jpg" class="cover" alt="photo" />
+            <p>Elemental</p>
+          </a>
         </article>
         <article>
+          <a href="#">
             <img src="image/Meg 2.jpg" class="cover" alt="photo" />
             <p>Meg 2: The Trench</p>
-            <a href="#">بیشتر...</a>
-          </article>
-          <article>
+          </a>
+        </article>
+        <article>
+          <a href="#">
             <img src="image/The Collective.jpg" class="cover" alt="photo" />
             <p>The Collective</p>
-            <a href="#">بیشتر...</a>
-          </article>
-          <article>
+          </a>
+        </article>
+        <article>
+          <a href="#">
             <img src="image/Spider-Man.jpg" class="cover" alt="photo" />
-            <p>Spider-Man: Across The Spider-Verse</p>
-            <a href="#">بیشتر...</a>
-          </article>
+            <p>Across The Spider-Verse</p>
+          </a>
+        </article>
       </section>
     </main>
     <footer>
