--- a/series.html
+++ b/series.html
@@ -19,33 +19,38 @@
     <main>
       <section class="container">
         <article>
-          <img
-            src="image/Only Murders in the Building.jpg"
-            class="cover"
-            alt="photo"
-          />
-          <p>Only Murders in the Building</p>
-          <a href="#">بیشتر...</a>
+          <a href="#">
+            <img
+              src="image/Only Murders in the Building.jpg"
+              class="cover"
+              alt="photo"
+            />
+            <p>Only Murders in the Building</p>
+          </a>
         </article>
         <article>
-          <img src="image/riverdale.jpg" class="cover" alt="photo" />
-          <p>Riverdale</p>
-          <a href="#">بیشتر...</a>
+          <a href="#">
+            <img src="image/riverdale.jpg" class="cover" alt="photo" />
+            <p>Riverdale</p>
+          </a>
         </article>
         <article>
-          <img src="image/The Witcher.jpg" class="cover" alt="photo" />
-          <p>The Witcher</p>
-          <a href="#">بیشتر...</a>
+          <a href="#">
+            <img src="image/The Witcher.jpg" class="cover" alt="photo" />
+            <p>The Witcher</p>
+          </a>
         </article>
         <article>
-          <img src="image/Celebrity.jpg" class="cover" alt="photo" />
-          <p>Celebrity</p>
-          <a href="#">بیشتر...</a>
+          <a href="#">
+            <img src="image/Celebrity.jpg" class="cover" alt="photo" />
+            <p>Celebrity</p>
+          </a>
         </article>
         <article>
-          <img src="image/Black Mirror.jpg" class="cover" alt="photo" />
-          <p>Black Mirror</p>
-          <a href="#">بیشتر...</a>
+          <a href="#"
+            ><img src="image/Black Mirror.jpg" class="cover" alt="photo" />
+            <p>Black Mirror</p>
+          </a>
         </article>
       </section>
     </main>
