--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             alt="photo"
           />
           <p>فیلم</p>
-          <a href="#">بیشتر...</a>
+          <a href="film.html">بیشتر...</a>
         </article>
         <article>
           <img src="image/Black Mirror.jpg" class="cover" alt="photo" />
           <p>سریال</p>
-          <a href="#">بیشتر...</a>
+          <a href="series.html">بیشتر...</a>
         </article>
         <article>
           <img src="image/shawshank.jpg" class="cover" alt="photo" />
